shire/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shire
  namespace: industries
spec:
  selector:
    app: shire
  ports:
    - port: 80
      targetPort: 3000
