shire/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shire-ingress
  namespace: industries
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: julian-one.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shire
                port:
                  number: 80
  tls:
    - hosts:
        - julian-one.com
      secretName: shire-tls
